# PageSpray

./: README.md
analysis/dynamic/aead_sendmsg/: report
analysis/dynamic/array_map_mmap/: report
analysis/dynamic/netlink_sendmsg/: report
analysis/dynamic/packet_sendmsg/: report
analysis/dynamic/skcipher_sendmsg/: report
analysis/dynamic/tap_get_user/: report
analysis/dynamic/tun_alloc_skb/: report
analysis/dynamic/xsk_mmap/: report
analysis/static/analyze/analyzer/src/lib/: Annotation.cc  Annotation.h  CMakeLists.txt  CallGraph.cc  CallGraph.h  CallsiteAnalyzer.cc  CallsiteAnalyzer.h  Common.h  GlobalCtx.h  KPSMain.cc  Makefile  cmake_install.cmake  config.h  run.sh
evaluation/exploit_env/: README.md  setup.conf  startvm
evaluation/grader/: batch_test.sh  vuln_tester.py
evaluation/scripts/create-image/: create-image.sh  phoronix_add.sh  phoronix_readme.txt  phoronix_update.sh
exploits_stability_exploitability/grader/: exp_runner.py  qemu_runner.py
realworld/: README.md
realworld/CVE-2022-20409/: exp_s22.c
realworld/CVE-2022-2585/: exp.c
stability_exploitability/: Dockerfile  README.md
stability_exploitability/exploit_env/: libexp.c  pack.sh
static_and_dynamic_analysis/dynamic/fuse_do_ioctl/: report
static_and_dynamic_analysis/dynamic/io_uring_mmap/: report
static_and_dynamic_analysis/dynamic/mptcp_sendmsg/: report
static_and_dynamic_analysis/dynamic/packet_mmap/: report
static_and_dynamic_analysis/dynamic/packet_set_ring/: report
static_and_dynamic_analysis/dynamic/pipe_write/: report
(+142 files in other folders)
